2005-09-09  Martin Hunt  <hunt@redhat.com>

	* math/div64.c (main): Fixes for running on 64-bit hardware.

	* README: Update.
	* math/div64.c: New file. 64-bit division tests.
